[DFMLD-72] update help text for table id/launch alias

--- a/web/sites/mobile-live-dealer/config/sync/field.field.node.games.field_table_id.yml
+++ b/web/sites/mobile-live-dealer/config/sync/field.field.node.games.field_table_id.yml
@@ -9,8 +9,8 @@ id: node.games.field_table_id
 field_name: field_table_id
 entity_type: node
 bundle: games
-label: 'Table ID'
-description: "Use this field to add in table id for the following game integrations:\r\n<ul>\r\n<li>Ezugi</li>\r\n</ul>"
+label: 'Table ID/ Launch Alias'
+description: "Use this field to for Direct Table Launch the following game integrations:\r\n<ul>\r\n<li>Ezugi - Please provide table ID</li>\r\n<li>Playtech - Please provide launch alias</li>\r\n</ul>"
 required: false
 translatable: false
 default_value: {  }
