--- a/web/sites/777baby-casino/config/sync/core.entity_form_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_form_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
@@ -3,7 +3,7 @@ langcode: ja
 status: true
 dependencies:
   config:
-    - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_all_games_category	
+    - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_all_games_category
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_arcade_game_category
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_arcade_game_filter
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_client_type
@@ -31,7 +31,6 @@ dependencies:
     - image
     - lucky_baby_mobile_games
     - text
-    - lucky_baby_mobile_games
 third_party_settings:
   field_group:
     group_for_casino_page:
@@ -39,7 +38,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 11
+      weight: 13
       format_type: fieldset
       format_settings:
         id: ''
@@ -51,7 +50,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 12
+      weight: 15
       format_type: fieldset
       format_settings:
         id: ''
@@ -64,7 +63,7 @@ third_party_settings:
         - field_arcade_game_category
         - field_arcade_game_filter
       parent_name: ''
-      weight: 13
+      weight: 16
       format_type: fieldset
       format_settings:
         id: ''
@@ -77,7 +76,7 @@ third_party_settings:
         - field_game_title_icon
         - field_game_icon_label
       parent_name: ''
-      weight: 16
+      weight: 17
       format_type: fieldset
       format_settings:
         id: ''
@@ -91,14 +90,11 @@ bundle: lucky_baby_mobile_games_entity
 mode: default
 content:
   field_all_games_category:
-    weight: 18
-    settings:
-      match_operator: CONTAINS
-      size: 60		
-      placeholder: ''
-    third_party_settings: { }
-    type: entity_reference_autocomplete
-    region: content	
+    weight: 14
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_arcade_game_category:
     weight: 14
     settings: {  }
@@ -172,7 +168,7 @@ content:
     type: string_textfield
     region: content
   field_game_description:
-    weight: 17
+    weight: 18
     settings:
       rows: 9
       summary_rows: 3
@@ -237,7 +233,7 @@ content:
     type: string_textfield
     region: content
   field_game_provider:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -279,13 +275,10 @@ content:
     type: options_select
     region: content
   field_provider_product:
-    weight: 16
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 10
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   langcode:
     type: language_select
@@ -295,7 +288,7 @@ content:
       include_locked: true
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
