--- a/web/sites/mobile-zedbet/config/sync/config_ignore.settings.yml
+++ b/web/sites/mobile-zedbet/config/sync/config_ignore.settings.yml
@@ -18,5 +18,6 @@ ignored_config_entities:
   32: 'webcomposer_form_manager.*'
   34: 'webcomposer_playtech_integration.*'
   36: 'registration_config.*'
+  38: 'account_config.*'
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
