change mobile live-dealer cms game code help text

--- a/web/sites/mobile-live-dealer/config/sync/field.field.node.games.field_table_id.yml
+++ b/web/sites/mobile-live-dealer/config/sync/field.field.node.games.field_table_id.yml
@@ -10,7 +10,7 @@ field_name: field_table_id
 entity_type: node
 bundle: games
 label: 'Table ID/ Launch Alias'
-description: "Use this field to for Direct Table Launch the following game integrations:\r\n<ul>\r\n<li>Ezugi - Please provide table ID</li>\r\n<li>Playtech - Please provide launch alias</li>\r\n<li>Voidbridge - Please provide table ID</li>\r\n<li>eBet - Please provide table ID</li>\r\n</ul>"
+description: "Use this field to for Direct Table Launch the following game integrations:\r\n<ul>\r\n<li>Ezugi - Please provide table ID</li>\r\n<li>Playtech - Please provide launch alias</li>\r\n<li>Voidbridge - Please provide table ID and check \"Use Game Lobby\"</li>\r\n</ul>"
 required: false
 translatable: false
 default_value: {  }
