--- a/web/sites/mobile-lottery/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/mobile-lottery/config/sync/core.entity_view_display.node.games.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.games.body
+    - field.field.node.games.field_game_code
     - field.field.node.games.field_game_landscape_size
     - field.field.node.games.field_game_provider
     - field.field.node.games.field_game_ribbon
@@ -16,6 +17,7 @@ dependencies:
     - field.field.node.games.field_native_app
     - field.field.node.games.field_target
     - field.field.node.games.field_use_game_loader
+    - field.field.node.games.field_use_lobby
     - node.type.games
   module:
     - datetime
@@ -51,6 +53,14 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_game_code:
+    weight: 112
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_landscape_size:
     weight: 110
@@ -145,6 +155,16 @@ content:
     region: content
   field_use_game_loader:
     weight: 108
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_use_lobby:
+    weight: 113
     label: above
     settings:
       format: default
