--- a/web/sites/keno/config/sync/user.role.authenticated.yml
+++ b/web/sites/keno/config/sync/user.role.authenticated.yml
@@ -13,6 +13,7 @@ permissions:
   - 'access content'
   - 'access language en'
   - 'access language id'
+  - 'access language ja'
   - 'access language ko'
   - 'access language th'
   - 'access language vi'
