--- a/web/sites/keno/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/keno/config/sync/core.entity_view_display.node.games.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.games.field_available_on_tablet
     - field.field.node.games.field_disable_in_tablet
     - field.field.node.games.field_end_date
+    - field.field.node.games.field_game_code
     - field.field.node.games.field_game_image
     - field.field.node.games.field_game_image_large
     - field.field.node.games.field_game_info_id
@@ -68,6 +69,14 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_game_code:
+    weight: 17
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_image:
     weight: 6
