CMPSR-16-add-jp-language-for-mobile

--- a/web/sites/mobile-lottery/config/sync/user.role.anonymous.yml
+++ b/web/sites/mobile-lottery/config/sync/user.role.anonymous.yml
@@ -15,6 +15,7 @@ permissions:
   - 'access language en'
   - 'access language hi'
   - 'access language id'
+  - 'access language ja'
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
