--- a/web/sites/777baby-casino/config/sync/lucky_baby_config.page_configuration.yml
+++ b/web/sites/777baby-casino/config/sync/lucky_baby_config.page_configuration.yml
@@ -29,6 +29,7 @@ weekly_winner_breadcrumb: ''
 faq_breadcrumb: ''
 jackpot_breadcrumb: ''
 contact_breadcrumb: ''
+promotions_page_breadcrumb: ''
 sitemap_breadcrumb: ''
 reg_breadcrumb: ''
 games_breadcrumb: ''
