--- a/web/sites/zipang-casino/config/sync/zipang_config.page_configuration.yml
+++ b/web/sites/zipang-casino/config/sync/zipang_config.page_configuration.yml
@@ -27,6 +27,7 @@ weekly_winner_breadcrumb: ''
 faq_breadcrumb: ''
 jackpot_breadcrumb: ''
 contact_breadcrumb: ''
+promotions_page_breadcrumb: ''
 sitemap_breadcrumb: ''
 reg_breadcrumb: ''
 games_breadcrumb: ''
