--- a/web/sites/casino/config/sync/core.entity_form_display.node.game.default.yml
+++ b/web/sites/casino/config/sync/core.entity_form_display.node.game.default.yml
@@ -11,9 +11,9 @@ dependencies:
     - field.field.node.game.field_game_info
     - field.field.node.game.field_game_info_toggle
     - field.field.node.game.field_game_keywords
+    - field.field.node.game.field_game_platform
     - field.field.node.game.field_game_provider
     - field.field.node.game.field_game_title
-    - field.field.node.game.field_game_type
     - field.field.node.game.field_games_category
     - field.field.node.game.field_jackpot_code
     - field.field.node.game.field_jackpot_ticker
@@ -53,6 +53,7 @@ third_party_settings:
         - field_game_provider
         - field_game_code
         - field_game_type
+        - field_game_platform
       parent_name: ''
       weight: 10
       format_type: details
@@ -146,6 +147,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_game_platform:
+    weight: 15
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
   field_game_provider:
     type: options_select
     weight: 12
@@ -159,12 +166,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textarea
-    region: content
-  field_game_type:
-    weight: 14
-    settings: {  }
-    third_party_settings: {  }
-    type: options_buttons
     region: content
   field_games_category:
     type: options_buttons
