--- a/web/sites/casino/config/sync/field.field.node.game.field_game_code.yml
+++ b/web/sites/casino/config/sync/field.field.node.game.field_game_code.yml
@@ -10,7 +10,7 @@ field_name: field_game_code
 entity_type: node
 bundle: game
 label: 'Game Code'
-description: ''
+description: "<b>iCore game detail to use per provider:</b>\r\n<ul>\r\n <li><b>PAS:</b> GameId</li>\r\n <li><b>GPAS:</b> GPAS_GameId_POP</li>\r\n <li><b>PTPlus:</b> <i> gameCode|gameType</i> (Slot, Live)</li>\r\n</ul>"
 required: true
 translatable: true
 default_value: {  }
