--- a/web/sites/777baby-casino/config/sync/field.field.taxonomy_term.game_provider.field_game_provider_image_banner.yml
+++ b/web/sites/777baby-casino/config/sync/field.field.taxonomy_term.game_provider.field_game_provider_image_banner.yml
@@ -11,9 +11,9 @@ dependencies:
 third_party_settings:
   content_translation:
     translation_sync:
-      alt: alt
-      title: title
-      file: '0'
+      file: file
+      alt: '0'
+      title: '0'
 id: taxonomy_term.game_provider.field_game_provider_image_banner
 field_name: field_game_provider_image_banner
 entity_type: taxonomy_term
