--- a/web/sites/casino/config/sync/field.storage.node.field_game_platform.yml
+++ b/web/sites/casino/config/sync/field.storage.node.field_game_platform.yml
@@ -12,10 +12,10 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: ngm
+      value: '0'
       label: NGM
     -
-      value: live
+      value: '1'
       label: LIVE
   allowed_values_function: ''
 module: options
