--- a/web/sites/mobile-live-dealer/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/mobile-live-dealer/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -30,6 +30,7 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_provider
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_use_game_loader
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_status
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_table_id
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_title
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_unpublish_date
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_user_availability
@@ -128,6 +129,24 @@ third_party_settings:
         id: product-ribbon
         classes: ''
       label: 'Product Ribbon'
+    group_game_launch_settings:
+      children:
+        - field_slider_game_provider
+        - field_slider_game_code
+        - field_table_id
+        - field_game_platform
+        - field_slider_enable_game_launch
+        - field_slider_use_game_loader
+        - field_game_lobby
+      parent_name: ''
+      weight: 9
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: 'Game Launch Settings'
 _core:
   default_config_hash: OZJ37uq9NXIxbipYTMrqYIn6yXsVaUWLRX1cLOk0Kl0
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default
@@ -309,14 +328,14 @@ content:
     type: options_select
     region: content
   field_game_lobby:
-    weight: 11
+    weight: 21
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_game_platform:
-    weight: 14
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -526,14 +545,14 @@ content:
     type: text_textfield
     region: content
   field_slider_enable_game_launch:
-    weight: 9
+    weight: 19
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_slider_game_code:
-    weight: 12
+    weight: 16
     settings:
       size: 60
       placeholder: ''
@@ -541,13 +560,13 @@ content:
     type: string_textfield
     region: content
   field_slider_game_provider:
-    weight: 13
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_slider_use_game_loader:
-    weight: 10
+    weight: 20
     settings:
       display_label: true
     third_party_settings: {  }
@@ -558,6 +577,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_table_id:
+    weight: 17
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_title:
     weight: 0
