--- a/web/sites/mobile-entrypage/config/sync/field.field.paragraph.game_list.field_game_image.yml
+++ b/web/sites/mobile-entrypage/config/sync/field.field.paragraph.game_list.field_game_image.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.paragraph.field_game_image
     - paragraphs.paragraphs_type.game_list
   module:
+    - content_translation
     - image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      file: file
+      alt: '0'
+      title: '0'
 id: paragraph.game_list.field_game_image
 field_name: field_game_image
 entity_type: paragraph
