--- a/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_game_platform.yml
+++ b/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_game_platform.yml
@@ -14,7 +14,7 @@ bundle: promo_banner_game_launch
 label: 'Game Platform'
 description: '- Used on Playtech Integration'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
