--- a/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_use_lobby.yml
+++ b/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_use_lobby.yml
@@ -12,7 +12,7 @@ bundle: promo_banner_game_launch
 label: 'Use Lobby'
 description: 'Used in Live Dealer to direct player to game lobby'
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 0
