--- a/web/sites/mobile-entrypage/config/sync/core.entity_form_display.paragraph.promo_banner_game_launch.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_form_display.paragraph.promo_banner_game_launch.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.promo_banner_game_launch.field_game_platform
     - field.field.paragraph.promo_banner_game_launch.field_game_provider
     - field.field.paragraph.promo_banner_game_launch.field_game_subprovider
+    - field.field.paragraph.promo_banner_game_launch.field_game_title
     - field.field.paragraph.promo_banner_game_launch.field_product
     - field.field.paragraph.promo_banner_game_launch.field_target
     - field.field.paragraph.promo_banner_game_launch.field_use_game_loader
@@ -24,7 +25,7 @@ third_party_settings:
         - field_game_subprovider
         - field_use_lobby
       parent_name: ''
-      weight: 1
+      weight: 2
       format_type: details
       format_settings:
         id: ''
@@ -38,7 +39,7 @@ bundle: promo_banner_game_launch
 mode: default
 content:
   field_game_code:
-    weight: 1
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -46,22 +47,30 @@ content:
     type: string_textfield
     region: content
   field_game_platform:
-    weight: 2
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_provider:
-    weight: 3
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_subprovider:
-    weight: 4
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_game_title:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_product:
     weight: 0
@@ -70,20 +79,20 @@ content:
     type: options_select
     region: content
   field_target:
-    weight: 7
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_use_game_loader:
-    weight: 2
+    weight: 3
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_use_lobby:
-    weight: 6
+    weight: 13
     settings:
       display_label: true
     third_party_settings: {  }
@@ -91,6 +100,5 @@ content:
     region: content
 hidden:
   created: true
-  field_provider: true
   status: true
   uid: true
