--- a/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.promo_banner_game_launch.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.promo_banner_game_launch.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.promo_banner_game_launch.field_game_platform
     - field.field.paragraph.promo_banner_game_launch.field_game_provider
     - field.field.paragraph.promo_banner_game_launch.field_game_subprovider
+    - field.field.paragraph.promo_banner_game_launch.field_game_title
     - field.field.paragraph.promo_banner_game_launch.field_product
     - field.field.paragraph.promo_banner_game_launch.field_target
     - field.field.paragraph.promo_banner_game_launch.field_use_game_loader
@@ -50,6 +51,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_game_title:
+    weight: 8
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_product:
     weight: 0
     label: above
@@ -84,5 +93,4 @@ content:
     third_party_settings: {  }
     type: boolean
     region: content
-hidden:
-  field_provider: true
+hidden: {  }
