--- a/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_game_provider.yml
+++ b/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_game_provider.yml
@@ -13,7 +13,7 @@ bundle: promo_banner_game_launch
 label: 'Game Provider'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
