--- a/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_target.yml
+++ b/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_target.yml
@@ -14,7 +14,7 @@ bundle: promo_banner_game_launch
 label: Target
 description: 'Option to chose if game will launch on a different window (popup) or launch to current window.'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
