--- a/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_use_game_loader.yml
+++ b/web/sites/mobile-entrypage/config/sync/field.field.paragraph.promo_banner_game_launch.field_use_game_loader.yml
@@ -12,7 +12,7 @@ bundle: promo_banner_game_launch
 label: 'Use Game Loader'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 0
