--- a/web/sites/registration/config/sync/webcomposer_form_manager.form.registration_form.bonus_code.yml
+++ b/web/sites/registration/config/sync/webcomposer_form_manager.form.registration_form.bonus_code.yml
@@ -1,17 +1,31 @@
 field_settings:
   label: 'Bonus Code'
-  placeholder: 'Bonus Code'
+  placeholder: Optional
   annotation: ''
-  is_hidden: 1
+  is_hidden: 0
 field_validations:
   required:
     enable: 0
     error_message: 'Field should be required'
   alphanumeric:
     enable: 0
+    error_message: 'Field should be Alphabet characters only'
+    parameters:
+      spaces: 1
+  alphanumeric:
+    enable: 1
     error_message: 'Field should be alphanumeric'
     parameters:
       spaces: 1
+  alpha_multi:
+    enable: 0
+    error_message: 'Value is not a valid multilingual character'
+    parameters:
+      space: 1
+      numeric: 1
+      allow: 0
+      disallow: 0
+      special: ''
   numeric:
     enable: 0
     error_message: 'Field should be numeric'
@@ -30,13 +44,42 @@ field_validations:
     parameters:
       length: '2'
   max_length:
-    enable: 0
+    enable: 1
     error_message: 'Maximum requirement not met'
     parameters:
-      length: '10'
+      length: '14'
+  regex:
+    enable: 0
+    error_message: 'This field only accepts specific characters.'
+    parameters:
+      regex_value: ''
+  valid_date:
+    enable: 0
+    error_message: 'Date is invalid'
+  must_not_match:
+    enable: 0
+    error_message: 'This must not match deafult.'
+    parameters:
+      not_match: ''
   username_availability:
     enable: 0
     error_message: 'Username not available'
   email_availability:
     enable: 0
     error_message: 'Email not available'
+  invalid_words:
+    enable: 0
+    error_message: 'Invalid/not allowed characters'
+    parameters:
+      invalid_words_list: ''
+  valid_languages:
+    enable: 0
+    error_message: 'This field only accepts specific characters.'
+    parameters:
+      regex_value: ''
+  not_match_username:
+    enable: 0
+    error_message: 'Password should not equal to username'
+  allowed_date:
+    enable: 0
+    error_message: 'Date is not allowed.'
