--- a/web/sites/ptplus/config/sync/field.field.tournament_api.tournament_api.field_banner_image.yml
+++ b/web/sites/ptplus/config/sync/field.field.tournament_api.tournament_api.field_banner_image.yml
@@ -28,8 +28,8 @@ settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
-  max_resolution: 627x250
-  min_resolution: 627x250
+  max_resolution: ''
+  min_resolution: ''
   alt_field: true
   alt_field_required: true
   title_field: false
