--- a/web/sites/ptplus/config/sync/core.extension.yml
+++ b/web/sites/ptplus/config/sync/core.extension.yml
@@ -70,6 +70,7 @@ module:
   token: 0
   toolbar: 0
   tournament_api: 0
+  tournament_settings: 0
   user: 0
   views_ui: 0
   webcomposer_affilates: 0
@@ -81,6 +82,7 @@ module:
   webcomposer_cdn: 0
   webcomposer_config: 0
   webcomposer_config_schema: 0
+  webcomposer_config_schema_sample: 0
   webcomposer_dashboard: 0
   webcomposer_dm: 0
   webcomposer_domain_import: 0
