--- a/web/sites/ptplus/config/sync/field.field.tournament_api.tournament_api.field_platform.yml
+++ b/web/sites/ptplus/config/sync/field.field.tournament_api.tournament_api.field_platform.yml
@@ -14,7 +14,7 @@ bundle: tournament_api
 label: Platform
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
