--- a/web/sites/ptplus/config/sync/field.field.tournament_api.tournament_api.field_status.yml
+++ b/web/sites/ptplus/config/sync/field.field.tournament_api.tournament_api.field_status.yml
@@ -14,7 +14,7 @@ bundle: tournament_api
 label: Status
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value:
   -
     value: enabled
