--- a/web/sites/mobile-nextbet/config/sync/views.view.game_list_slots_v2.yml
+++ b/web/sites/mobile-nextbet/config/sync/views.view.game_list_slots_v2.yml
@@ -1159,9 +1159,15 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_label
+          type: entity_reference_export
           settings:
-            link: 0
+            view_mode: default
+            extra:
+              id: id
+              title: 0
+              url: 0
+              type: 0
+              bundle: 0
           group_column: target_id
           group_columns: {  }
           group_rows: 1
@@ -1638,6 +1644,15 @@ display:
               raw_output: false
             field_games_list_category_export:
               alias: field_games_list_category
+              raw_output: false
+            publish_on:
+              alias: ''
+              raw_output: false
+            unpublish_on:
+              alias: ''
+              raw_output: false
+            status:
+              alias: ''
               raw_output: false
     cache_metadata:
       max-age: -1
