--- a/web/sites/mobile-entrypage/config/sync/core.entity_form_display.paragraph.game_list.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_form_display.paragraph.game_list.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.game_list.field_game_subprovider
     - field.field.paragraph.game_list.field_game_title
     - field.field.paragraph.game_list.field_product
+    - field.field.paragraph.game_list.field_table_id
     - field.field.paragraph.game_list.field_target
     - field.field.paragraph.game_list.field_use_game_loader
     - field.field.paragraph.game_list.field_use_lobby
@@ -25,6 +26,7 @@ third_party_settings:
         - field_game_title
         - field_game_code
         - field_game_platform
+        - field_table_id
         - field_game_image
         - field_game_provider
         - field_game_subprovider
@@ -53,7 +55,7 @@ content:
     type: string_textfield
     region: content
   field_game_image:
-    weight: 7
+    weight: 8
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -67,13 +69,13 @@ content:
     type: options_select
     region: content
   field_game_provider:
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_subprovider:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -92,6 +94,14 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_table_id:
+    weight: 7
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_target:
     weight: 2
     settings: {  }
@@ -106,7 +116,7 @@ content:
     type: boolean_checkbox
     region: content
   field_use_lobby:
-    weight: 10
+    weight: 11
     settings:
       display_label: true
     third_party_settings: {  }
