--- a/web/sites/mobile-entrypage/config/sync/core.entity_form_display.paragraph.promo_banner_game_launch.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_form_display.paragraph.promo_banner_game_launch.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.promo_banner_game_launch.field_field_table_id
     - field.field.paragraph.promo_banner_game_launch.field_game_code
     - field.field.paragraph.promo_banner_game_launch.field_game_platform
     - field.field.paragraph.promo_banner_game_launch.field_game_provider
@@ -21,6 +22,7 @@ third_party_settings:
       children:
         - field_game_code
         - field_game_platform
+        - field_field_table_id
         - field_game_provider
         - field_game_subprovider
         - field_use_lobby
@@ -38,6 +40,14 @@ targetEntityType: paragraph
 bundle: promo_banner_game_launch
 mode: default
 content:
+  field_field_table_id:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_code:
     weight: 9
     settings:
@@ -53,13 +63,13 @@ content:
     type: options_select
     region: content
   field_game_provider:
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_subprovider:
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -92,7 +102,7 @@ content:
     type: boolean_checkbox
     region: content
   field_use_lobby:
-    weight: 13
+    weight: 14
     settings:
       display_label: true
     third_party_settings: {  }
