--- a/web/sites/ptplus/config/sync/core.entity_view_display.tournament_api.tournament_api.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.tournament_api.tournament_api.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.tournament_api.tournament_api.field_banner_image
+    - field.field.tournament_api.tournament_api.field_banner_image_landscape
     - field.field.tournament_api.tournament_api.field_platform
     - field.field.tournament_api.tournament_api.field_status
     - field.field.tournament_api.tournament_api.field_title
@@ -21,7 +22,20 @@ bundle: tournament_api
 mode: default
 content:
   field_banner_image:
-    weight: 2
+    weight: 3
+    label: above
+    settings:
+      svg_attributes:
+        width: ''
+        height: ''
+      svg_render_as_image: true
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
+  field_banner_image_landscape:
+    weight: 7
     label: above
     settings:
       svg_attributes:
@@ -34,21 +48,21 @@ content:
     type: image
     region: content
   field_platform:
-    weight: 5
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_status:
     weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
+  field_status:
+    weight: 8
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_title:
-    weight: 1
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -56,7 +70,7 @@ content:
     type: string
     region: content
   field_tournament_end_date:
-    weight: 4
+    weight: 5
     label: above
     settings:
       format_type: medium
@@ -65,7 +79,7 @@ content:
     type: datetime_default
     region: content
   field_tournament_start_date:
-    weight: 3
+    weight: 4
     label: above
     settings:
       format_type: medium
@@ -76,7 +90,7 @@ content:
   name:
     label: above
     type: string
-    weight: -4
+    weight: 0
     region: content
     settings:
       link_to_entity: false
@@ -84,7 +98,7 @@ content:
   user_id:
     label: hidden
     type: author
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
