--- a/web/sites/ptplus/config/sync/views.view.desktop_tournament_banners.yml
+++ b/web/sites/ptplus/config/sync/views.view.desktop_tournament_banners.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - block.block.languagedropdownswitcher_2
     - field.storage.tournament_api.field_banner_image
+    - field.storage.tournament_api.field_banner_image_landscape
     - field.storage.tournament_api.field_platform
     - field.storage.tournament_api.field_status
     - field.storage.tournament_api.field_title
@@ -1145,6 +1146,9 @@ display:
             field_banner_image_export:
               alias: field_banner_image
               raw_output: false
+            field_banner_image_landscape_export:
+              alias: field_banner_image_landscape
+              raw_output: false
             field_platform:
               alias: field_platform
               raw_output: false
@@ -1238,6 +1242,69 @@ display:
           id: field_banner_image_export
           table: tournament_api__field_banner_image
           field: field_banner_image_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: image_export
+          settings:
+            image_style: ''
+            export_alt: 1
+            export_title: false
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
+        field_banner_image_landscape_export:
+          id: field_banner_image_landscape_export
+          table: tournament_api__field_banner_image_landscape
+          field: field_banner_image_landscape_export
           relationship: none
           group_type: group
           admin_label: ''
@@ -1621,6 +1688,7 @@ display:
         - request_format
       tags:
         - 'config:field.storage.tournament_api.field_banner_image'
+        - 'config:field.storage.tournament_api.field_banner_image_landscape'
         - 'config:field.storage.tournament_api.field_platform'
         - 'config:field.storage.tournament_api.field_title'
         - 'config:field.storage.tournament_api.field_tournament_end_date'
