WEBSITE-744-Role-Access

--- a/web/sites/keno/config/sync/user.role.authenticated.yml
+++ b/web/sites/keno/config/sync/user.role.authenticated.yml
@@ -11,10 +11,15 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access language bn'
   - 'access language en'
+  - 'access language hi'
   - 'access language id'
+  - 'access language in'
   - 'access language ja'
   - 'access language ko'
+  - 'access language pk'
+  - 'access language te'
   - 'access language th'
   - 'access language vi'
   - 'access shortcuts'
