WEBSITE-1011 Enable webcomposer cache module on all Japan brands

--- a/web/sites/777baby-casino/config/sync/core.extension.yml
+++ b/web/sites/777baby-casino/config/sync/core.extension.yml
@@ -86,6 +86,7 @@ module:
   toolbar: 0
   user: 0
   views_ui: 0
+  webcomposer_cache: 0
   webcomposer_affilates: 0
   webcomposer_announcements: 0
   webcomposer_audit: 0
