--- a/web/sites/mobile-lottery/config/sync/language.entity.hi.yml
+++ b/web/sites/mobile-lottery/config/sync/language.entity.hi.yml
@@ -8,6 +8,7 @@ third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
     webcomposer_language_custom_label: हिन्दी
+    webcomposer_language_hidden: 0
 id: hi
 label: 'Hindi (India)'
 direction: ltr
