--- a/web/sites/mobile-lottery/config/sync/language.entity.in.yml
+++ b/web/sites/mobile-lottery/config/sync/language.entity.in.yml
@@ -1,5 +1,5 @@
-uuid: 9fecafb9-1b90-4da9-bf0b-53c95e775be1
-langcode: bn
+uuid: 6cd9e5a8-24e5-4b71-9d0f-b3f2d6bf7363
+langcode: in
 status: true
 dependencies:
   module:
@@ -7,10 +7,10 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: 'English (Bangladesh)'
+    webcomposer_language_custom_label: English
     webcomposer_language_hidden: 0
-id: bn
-label: 'English (Bangladesh)'
+id: in
+label: 'India (English)'
 direction: ltr
-weight: 0
+weight: 5
 locked: false
