--- a/web/sites/mobile-lottery/config/sync/language.entity.te.yml
+++ b/web/sites/mobile-lottery/config/sync/language.entity.te.yml
@@ -1,5 +1,5 @@
-uuid: 9fecafb9-1b90-4da9-bf0b-53c95e775be1
-langcode: bn
+uuid: bacd2436-4c4c-47a5-a6b3-34c2c34e55e9
+langcode: te
 status: true
 dependencies:
   module:
@@ -7,10 +7,10 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: 'English (Bangladesh)'
+    webcomposer_language_custom_label: తెలుగు
     webcomposer_language_hidden: 0
-id: bn
-label: 'English (Bangladesh)'
+id: te
+label: Telugu
 direction: ltr
-weight: 0
+weight: 2
 locked: false
