--- a/web/sites/mobile-lottery/config/sync/language.negotiation.yml
+++ b/web/sites/mobile-lottery/config/sync/language.negotiation.yml
@@ -5,16 +5,20 @@ url:
   prefixes:
     en: en
     zh-hans: sc
-    zh-hant: ch
+    zh-hant: zh-hant
     th: th
     ko: kr
-    hi: in
+    hi: hi
     vi: vn
     id: id
     lo: lo
-    km: km
     bu: bu
+    km: km
     ja: jp
+    in: in
+    te: te
+    bn: bn
+    pk: pk
   domains:
     en: ''
     zh-hans: ''
@@ -25,9 +29,13 @@ url:
     vi: ''
     id: ''
     lo: ''
-    km: ''
     bu: ''
+    km: ''
     ja: ''
+    in: ''
+    te: ''
+    bn: ''
+    pk: ''
 selected_langcode: site_default
 _core:
   default_config_hash: uEePITI9tV6WqzmsTb7MfPCi5yPWXSxAN1xeLcYFQbM
