--- a/web/sites/mobile-lottery/config/sync/user.role.anonymous.yml
+++ b/web/sites/mobile-lottery/config/sync/user.role.anonymous.yml
@@ -11,14 +11,18 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access language bn'
   - 'access language bu'
   - 'access language en'
   - 'access language hi'
   - 'access language id'
+  - 'access language in'
   - 'access language ja'
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
+  - 'access language pk'
+  - 'access language te'
   - 'access language th'
   - 'access language vi'
   - 'access language zh-hans'
