[WEBSITE-1014] Added new language in to Zedbet desktop

--- a/web/sites/zedbet/config/sync/user.role.anonymous.yml
+++ b/web/sites/zedbet/config/sync/user.role.anonymous.yml
@@ -12,7 +12,7 @@ permissions:
   - 'access comments'
   - 'access content'
   - 'access language en'
-  - 'access language hi'
+  - 'access language in'
   - 'access language id'
   - 'access language ko'
   - 'access language th'
