[WEBSITE-745] DF LD MOB ass ES PT languages

--- a/web/sites/mobile-live-dealer/config/sync/user.role.anonymous.yml
+++ b/web/sites/mobile-live-dealer/config/sync/user.role.anonymous.yml
@@ -13,6 +13,7 @@ permissions:
   - 'access content'
   - 'access language bu'
   - 'access language en'
+  - 'access language es'
   - 'access language hi'
   - 'access language id'
   - 'access language in'
@@ -20,6 +21,7 @@ permissions:
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
+  - 'access language pt-br'
   - 'access language te'
   - 'access language th'
   - 'access language vi'
