--- a/web/sites/zedbet/config/sync/core.entity_form_display.taxonomy_term.product_promotions.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_form_display.taxonomy_term.product_promotions.default.yml
@@ -12,23 +12,31 @@ dependencies:
     - field.field.taxonomy_term.product_promotions.field_this_product_kebab
     - taxonomy.vocabulary.product_promotions
   module:
-    - path
-    - text
+    - field_group
+third_party_settings:
+  field_group:
+    group_attributes:
+      children:
+        - field_class
+        - field_product_tag
+        - field_target
+      parent_name: ''
+      weight: 6
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Attributes
 id: taxonomy_term.product_promotions.default
 targetEntityType: taxonomy_term
 bundle: product_promotions
 mode: default
 content:
-  description:
-    type: text_textfield
-    weight: 0
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   field_class:
-    weight: 31
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -36,14 +44,14 @@ content:
     type: string_textfield
     region: content
   field_enable_disable:
-    weight: 32
+    weight: 2
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_product_id:
-    weight: 33
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -51,13 +59,13 @@ content:
     type: string_textfield
     region: content
   field_product_tag:
-    weight: 35
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_products:
-    weight: 34
+    weight: 5
     settings:
       rows: 5
       placeholder: ''
@@ -65,13 +73,13 @@ content:
     type: string_textarea
     region: content
   field_target:
-    weight: 37
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_this_product_kebab:
-    weight: 36
+    weight: 3
     settings:
       display_label: true
     third_party_settings: {  }
@@ -79,26 +87,24 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   translation:
     weight: 10
     region: content
-hidden: {  }
+    settings: {  }
+    third_party_settings: {  }
+hidden:
+  description: true
+  path: true
