--- a/web/sites/mobile-zedbet/config/sync/core.extension.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.extension.yml
@@ -49,6 +49,7 @@ module:
   mobile_config: 0
   mobile_live_dealer: 0
   mobile_product_menu: 0
+  mobile_promotions: 0
   node: 0
   options: 0
   paragraphs: 0
